Use go.FigureWidget

--- a/notebooks/DataShaderExample.ipynb
+++ b/notebooks/DataShaderExample.ipynb
@@ -21,8 +21,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotly.graph_objs import FigureWidget\n",
-    "\n",
     "# core\n",
     "import io\n",
     "import base64 \n",
@@ -154,16 +152,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objs as go"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "f = FigureWidget(data=[{'x': x_range, \n",
-    "                        'y': y_range, \n",
-    "                        'mode': 'markers',\n",
-    "                        'marker': {'opacity': 0}}], # invisible trace to init axes and to support autoresize\n",
-    "                 layout={'width': plot_width, 'height': plot_height})\n",
+    "f = go.FigureWidget(data=[{'x': x_range, \n",
+    "                           'y': y_range, \n",
+    "                           'mode': 'markers',\n",
+    "                           'marker': {'opacity': 0}}], # invisible trace to init axes and to support autoresize\n",
+    "                    layout={'width': plot_width, 'height': plot_height})\n",
     "f"
    ]
   },
@@ -174,7 +181,7 @@
    "outputs": [],
    "source": [
     "# Set background image\n",
-    "f.layout.images = [dict(\n",
+    "f.layout.images = [go.layout.Image(\n",
     "    source = initial_img,  # plotly now performs auto conversion of PIL image to png data URI\n",
     "    xref = \"x\",\n",
     "    yref = \"y\",\n",
