fix for issue #9
issue on https://github.com/jonmmease/plotly_ipywidget_notebooks/issues/9

--- a/notebooks/Interact.ipynb
+++ b/notebooks/Interact.ipynb
@@ -50,7 +50,7 @@
    ],
    "source": [
     "fig = go.FigureWidget()\n",
-    "scatt = fig.add_scatter()\n",
+    "scatt = fig.add_scatter().data[0]\n",
     "fig"
    ]
   },
@@ -90,6 +90,7 @@
     "        scatt.x=xs\n",
     "        scatt.y=np.sin(a*xs-b)\n",
     "        scatt.line.color=color"
+    "        fig.show()"
    ]
   },
   {
