Fix widget update function

--- a/notebooks/Interact.ipynb
+++ b/notebooks/Interact.ipynb
@@ -87,9 +87,9 @@
     "@interact(a=(1.0, 4.0, 0.01), b=(0, 10.0, 0.01), color=['red', 'green', 'blue'])\n",
     "def update(a=3.6, b=4.3, color='blue'):\n",
     "    with fig.batch_update():\n",
-    "        scatt.x=xs\n",
-    "        scatt.y=np.sin(a*xs-b)\n",
-    "        scatt.line.color=color"
+    "        scatt.data[0].x=xs\n",
+    "        scatt.data[0].y=np.sin(a*xs-b)\n",
+    "        scatt.data[0].line.color=color"
    ]
   },
   {
